--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,16 @@
       content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
   />
 
+  <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.0/mapsjs-ui.css?dp-version=1526040296" />
+
+  <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
+  <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
+  <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
+  <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
+
+
   <title>Qwik Admin</title>
+
 </head>
 <body>
   <div id="app"></div>
